FISH-6259 jvm args added in embedded test